[project]
name = "terra-appstream-helper"
version = "0.1.6"
description = "A helper tool for managing AppStream metadata for Terra applications."
readme = "README.md"
authors = [
    { name = "Cappy Ishihara", email = "cappy@cappuchino.xyz" }
]

dependencies = []

[project.scripts]
terra-appstream-helper = "terra_appstream_helper:main"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"
